--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,13 +2,13 @@
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="card rounded shadow size-login bg-custom text-center h-50">
             <div class="card-header">
-                <h1 class="text-success">Login</h1>
+                <h1 class="text-success">Login Admin</h1>
             </div>
 
             <div class="card-body ">
-                <div *ngIf="errorMessage" class="alert alert-danger mt-3"> {{ errorMessage }} </div>
-                <div *ngIf="successMessage" class="alert alert-success mt-3"> {{ successMessage }} </div>
-                <form #usersForm="ngForm" (ngSubmit)="login(usersForm.value)" novalidate>
+                <div *ngIf="errorMessage" class="alert alert-danger mt-3"> </div>
+                <div *ngIf="successMessage" class="alert alert-success mt-3">  </div>
+                <form  novalidate>
                     <div class="form-floating  mt-5 w-75 mx-auto">
                         <input type="text" class="form-control " name="username" id="formId1" placeholder="" ngModel
                             required minlength="5" />
@@ -43,18 +43,10 @@
                         </div>
 
                     </div>
-
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
-                            Remember me
-                        </label>
-                    </div>
-                    <a href="register" class="text-primary">Bạn chưa có tài khoản, hãy bấm vô đây để đăng ký nhé!</a>
                     <div class="position-relative">
                         <input type="submit" value="Login"
                             class="btn btn-outline-success mt-5 position-absolute top-50 start-50 translate-middle"
-                            [disabled]="usersForm.invalid">
+                            >
                     </div>
                 </form>
             </div>
