--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,47 @@
-.bg-custom{
+.bg-custom {
     background-color: #f2e2aa;
 }
-.color-text{
-    color:  #58a1d9;;
+
+.color-text {
+    color: #58a1d9;
+    ;
 }
-.bg-product{
+
+.bg-product {
     background-color: #f2c070;
 }
-.logo-size{
+
+.logo-size {
     width: 100px;
     height: 100px;
+}
+
+.position-relative {
+    position: relative;
+}
+
+.list-group {
+    z-index: 1000;
+    /* Đảm bảo gợi ý luôn nổi trên các phần tử khác */
+    background: white;
+    cursor: pointer;
+}
+
+.list-group-item:hover {
+    background: #f0f0f0;
+}
+
+
+
+.container.d-flex {
+    gap: 20px; /* Tạo khoảng cách giữa h1 và sản phẩm */
+}
+
+h5 {
+    margin: 0;
+    white-space: nowrap; /* Đảm bảo h1 không xuống dòng */
+}
+
+.bg-product {
+    width: 100%;
 }
