--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,30 +42,72 @@
         </ng-template>
 
 
+        <div class="input-group w-25 position-relative">
+            <input type="search" class="form-control rounded" placeholder="Tìm kiếm sản phẩm..."
+                [(ngModel)]="searchQuery" (ngModelChange)="onSearchChange($event)" aria-label="Search"
+                aria-describedby="search-addon" />
+            <button type="button" class="btn btn-outline-success" (click)="toSearch(searchQuery)">
+                Tìm
+            </button>
 
-        <div class="input-group w-25">
-            <input type="search" class="form-control rounded" placeholder="Tìm kiếm sản phẩm..." aria-label="Search"
-                aria-describedby="search-addon" #search="ngModel" ngModel/>
-            <button type="button" class="btn btn-outline-success" data-mdb-ripple-init (click)="toSearch(search.value)">Tìm</button>
+            <!-- Danh sách gợi ý -->
+            <ul class="list-group position-absolute mt-5 w-100" *ngIf="suggestions.length > 0">
+                <li class="list-group-item list-group-item-action" *ngFor="let suggestion of suggestions"
+                    (click)="selectSuggestion(suggestion)">
+                    {{ suggestion }}
+                </li>
+            </ul>
         </div>
+
+
     </div>
 </nav>
 
-<div class="container bg-product mt-3 shadow rounded">
-    <div class="row">
-        <div class="col-md-4 mt-3" *ngFor="let product of products">
-            <div class="card shadow rounded">
-                <img src={{product.imageUrl}} class="card-img-top" alt="Sản phẩm 2">
-                <div class="card-body">
-                    <h5 class="card-title">{{product.name}}</h5>
-                    <p class="card-text">{{product.description}}</p>
-                    <p class="card-text">Giá bán 1kg: {{product.price}}.000</p>
-                    <!-- <a href="product" class="btn btn-primary" >Mua ngay</a> -->
+
+<div class="container d-flex align-items-start mt-3">
+    <div class="me-3">
+        <h5>Theo danh mục sản phẩm</h5>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="interior" id="flexCheckDefault"
+                (change)="onCheckboxChange($event)">
+            <label class="form-check-label" for="flexCheckDefault">
+                Đồ gia dụng
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="food" id="flexCheckDefault1"
+                (change)="onCheckboxChange($event)">
+            <label class="form-check-label" for="flexCheckDefault1">
+                Đồ ăn
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="clother" id="flexCheckDefault2"
+                (change)="onCheckboxChange($event)" value="">
+            <label class="form-check-label" for="flexCheckDefault22">
+                Quần áo 
+            </label>
+        </div>
+        
+
+    </div>
+    <div class="container bg-product shadow rounded flex-grow-1">
+        <div class="row">
+            <div class="col-md-4 mt-3" *ngFor="let product of products">
+                <div class="card shadow rounded">
+                    <img src={{product.imageUrl}} class="card-img-top" alt="Sản phẩm 2">
+                    <div class="card-body">
+                        <h5 class="card-title">{{product.name}}</h5>
+                        <p class="card-text">{{product.description}}</p>
+                        <p class="card-text">Giá bán 1kg: {{product.price}}.000</p>
+                        <!-- <a href="product" class="btn btn-primary">Mua ngay</a> -->
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 
 
