--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -3,20 +3,89 @@
         <a class="navbar-brand shadow" href="home">
             <img src="assets/online_shop_16.jpg" alt="logo" class="rounded img-thumbnail logo-size">
         </a>
+        <div>
+
+            <ul class="navbar-nav ms-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link " href="home">Trang chủ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="order">Giỏ hàng</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+
+
+    <div class="input-group w-25 position-relative">
+        <input type="search" class="form-control rounded" placeholder="Tìm kiếm sản phẩm..." [(ngModel)]="searchQuery"
+            (ngModelChange)="onSearchChange($event)" aria-label="Search" aria-describedby="search-addon" />
+        <button type="button" class="btn btn-outline-success" (click)="toSearch(searchQuery)">
+            Tìm
+        </button>
+
+        <!-- Danh sách gợi ý -->
+        <ul class="list-group position-absolute mt-5 w-100" *ngIf="suggestions.length > 0">
+            <li class="list-group-item list-group-item-action" *ngFor="let suggestion of suggestions"
+                (click)="selectSuggestion(suggestion)">
+                {{ suggestion }}
+            </li>
+        </ul>
     </div>
 </nav>
 
-<div class="container bg-product mt-3 shadow rounded">
-    <div class="row">
-        <div class="col-md-4 bg-transparent" *ngFor="let product of products;">
-            <div class="card mt-3 shadow rounded">
-                <img src={{product.imageUrl}} class="card-img-top image-product" alt="Ảnh sản phẩm">
-                <div class="card-body shadow">
-                    <h5 class="card-title">{{product.name}}</h5>
-                    <p class="card-text">{{product.description}}</p>
-                    <p class="card-text">Giá bán 1kg: {{product.price}}.000</p>
-                    <a class="btn btn-outline-primary float-end" data-bs-toggle="modal" data-bs-target="#addCartModal"
-                        (click)="getProductBySelectedProductId(product.productId)" >Thêm vào giỏ hàng</a>
+<div class="container d-flex align-items-start mt-3">
+
+
+    <div class="me-3">
+        <h5>Theo danh mục sản phẩm</h5>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="category" value="interior" id="flexRadioDefault"
+                (change)="onRadioChange($event)">
+            <label class="form-check-label" for="flexRadioDefault">
+                Đồ nội thất
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="category" value="food" id="flexRadioDefault1"
+                (change)="onRadioChange($event)">
+            <label class="form-check-label" for="flexRadioDefault1">
+                Đồ ăn
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="category" value="clother" id="flexRadioDefault2"
+                (change)="onRadioChange($event)">
+            <label class="form-check-label" for="flexRadioDefault2">
+                Quần áo
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="category" value="all" id="flexRadioDefault3"
+                (change)="onRadioChange($event)" checked>
+            <label class="form-check-label" for="flexRadioDefault3">
+                Tất cả
+            </label>
+        </div>
+
+
+
+    </div>
+    <div class="container bg-product mt-3 shadow rounded">
+        <div class="row">
+            <div class="col-md-4 bg-transparent" *ngFor="let product of products;">
+                <div class="card mt-3 shadow rounded">
+                    <img src={{product.imageUrl}} class="card-img-top image-product" alt="Sản phẩm 2">
+                    <div class="card-body">
+                        <h5 class="card-title">{{product.name}}</h5>
+                        <p class="card-text">{{product.description}}</p>
+                        <p class="card-text">Giá bán 1kg: {{product.price}}.000</p>
+                        <a class="btn btn-outline-primary float-end" data-bs-toggle="modal"
+                            data-bs-target="#addCartModal"
+                            (click)="getProductBySelectedProductId(product.productId)">Thêm vào giỏ hàng</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -25,8 +94,9 @@
 
 
 
+
 <div class="modal fade" id="addCartModal">
-    
+
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
 
@@ -39,7 +109,7 @@
             <div class="modal-body text-center" *ngIf="selectedProduct">
                 <div *ngIf="errorMessage" class="alert alert-danger mt-3"> {{ errorMessage }} </div>
                 <div *ngIf="successMessage" class="alert alert-success mt-3"> {{ successMessage }} </div>
-                <img [src]="selectedProduct.data.imageUrl" alt="Ảnh sản phẩm" class="img-fluid rounded mb-3">
+                <img [src]="selectedProduct.data.imageUrl" alt="Ảnh sản phẩm" class="card-img-top image-product">
                 <h3>{{selectedProduct.data.name}}</h3>
                 <p>{{selectedProduct.data.description}}</p>
                 <p class="text-primary"><strong>Giá bán 1kg: {{selectedProduct.data.price}}.000 VND</strong></p>
@@ -53,7 +123,8 @@
 
 
             <div class="modal-footer">
-                <button class="btn btn-warning" (click)="saveOrder(selectedProduct.data.productId, selectedProduct.data.price)">Đặt hàng</button>
+                <button class="btn btn-warning"
+                    (click)="saveOrder(selectedProduct.data.productId, selectedProduct.data.price)">Đặt hàng</button>
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Để sau</button>
             </div>
         </div>
