--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="form-floating  mt-3 w-75 mx-auto">
-                        <input type="text" class="form-control " name="password" id="formId2" placeholder="" ngModel
+                        <input type="password" class="form-control " name="password" id="formId2" placeholder="" ngModel
                             required minlength="5" />
                         <label for="formId2">Password</label>
 
@@ -44,12 +44,16 @@
 
                     </div>
 
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
-                            Remember me
-                        </label>
+                    <div class="d-flex justify-content-end mt-4">
+                        <div class="d-flex align-items-center">
+                            <input class="form-check-input me-2" type="checkbox" name="rememberme"
+                                id="flexCheckDefault">
+                            <label class="form-check-label text-success" for="flexCheckDefault">
+                                Remember me
+                            </label>
+                        </div>
                     </div>
+
                     <a href="register" class="text-primary">Bạn chưa có tài khoản, hãy bấm vô đây để đăng ký nhé!</a>
                     <div class="position-relative">
                         <input type="submit" value="Login"
